# ai-tools

./: .gitignore  TASK_7.5_IMPLEMENTATION_SUMMARY.md  TASK_8.2_IMPLEMENTATION_SUMMARY.md  TASK_8.3_IMPLEMENTATION_SUMMARY.md  TASK_8.4_IMPLEMENTATION_SUMMARY.md  TASK_8.5_IMPLEMENTATION_SUMMARY.md  TASK_9.1_IMPLEMENTATION_SUMMARY.md  TASK_9.2_IMPLEMENTATION_SUMMARY.md  TASK_9.4_IMPLEMENTATION_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.kiro/specs/ai-tool-manager/: CHANGELOG.md  checkpoint-4-verification.md  checkpoint-6-verification.md  design.md  requirements.md  tasks.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proptest-regressions/: database.txt
src-tauri/src/: cli_adapter.rs  config.rs  database.rs  error.rs  filesystem.rs  lib.rs  main.rs  mcp.rs  process.rs  process_test.rs  runtime_monitor.rs  runtime_monitor_test.rs  secure_storage.rs  secure_storage_README.md  secure_storage_test_summary.md  store_service.rs  store_service_README.md  store_service_test.rs  token_estimator.rs
src/components/: ContextPanel.vue  DiffView.example.vue  DiffView.test.ts  DiffView.vue  FileTree.vue  MarkdownRenderer.test.ts  MarkdownRenderer.vue  ProjectPathInput.vue
src/router/: index.ts
src/stores/: index.ts  project.test.ts  project.ts  runtime.ts  session.test.ts  session.ts  settings.ts  toolState.ts
src/types/: index.ts
src/utils/: initStores.ts  store.ts
src/views/: ConversationView.test.ts  ConversationView.vue  HomeView.vue  ProjectView.vue  RuntimeManagerView.vue  SettingsView.vue
