[package]
name = "ai-tool-manager"
version = "0.1.0"
description = "AI Tool Manager - 统一管理和协调多种 AI CLI 工具"
authors = ["AI Tool Manager Team"]
edition = "2021"

[lib]
name = "ai_tool_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
