[package]
name = "ai-tool-manager"
version = "0.1.0"
description = "AI Tool Manager - 统一管理和协调多种 AI CLI 工具"
authors = ["AI Tool Manager Team"]
edition = "2021"

[lib]
name = "ai_tool_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"  # For persistent configuration storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"  # For gitignore support
tiktoken-rs = "0.5"  # For token estimation
sysinfo = "0.30"  # For system resource monitoring
reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
rusqlite = { version = "0.31", features = ["bundled"] }  # For SQLite database
chrono = "0.4"  # For timestamp handling
keyring = "3.6"  # For secure credential storage

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
